Try to solve an issue with click not working on ios.

--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ button {
   box-shadow: 2px 2px 20px 10px rgba(0, 0, 0, 0.2);
 }
 
-button:hover {
+/* button:hover {
   filter: brightness(95%);
-}
+} */
 
 button:active {
   transform: scale(0.98);
